--- a/level1.html
+++ b/level1.html
@@ -15,7 +15,7 @@
       "XXXX XXXX XXXX XXXX",
       "OOOX X       X XOOO",
       "XXXX X XXrXX X XXXX",
-      "O       bpo       O",
+      "X       bpo       X",
       "XXXX X XXXXX X XXXX",
       "OOOX X       X XOOO",
       "XXXX X XXXXX X XXXX",
