--- a/level2.html
+++ b/level2.html
@@ -10,14 +10,14 @@
       "X   b    X    p   X",
       "X XX XXX X XXX XX X",
       "X   XXXXX XXXXX   X",
-      "X XX X       X XX X",
+      "X XX           XX X",
       "X    X  r o  X    X",
       "XXXX XXXX XXXX XXXX",
-      "OOOX X       X XOOO",
+      "XO   X       X  OOX",
       "XXXX X XXPXX X XXXX",
-      "O                 O",
-      "XXXX X XXXXX X XXXX",
-      "OOOX X       X XOOO",
+      "X                 X",
+      "X X  X XXXXX X  X X",
+      "X    X       X    X",
       "XXXX X XXXXX X XXXX",
       "X        X        X",
       "X XX XXX X XXX XX X",
