Added music to levels

--- a/level1.html
+++ b/level1.html
@@ -32,6 +32,10 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+  <audio id="background-music" loop autoplay>
+    <source src="./music/sound1.mp3" type="audio/mpeg">
+    Music
+  </audio>
   <canvas id="board"></canvas>
 </body>
 </html>
