--- a/level2.html
+++ b/level2.html
@@ -33,6 +33,9 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+  <audio id="background-music" loop autoplay>
+    <source src="./music/sound1.mp3" type="audio/mpeg">
+  </audio>
   <canvas id="board"></canvas>
 </body>
 </html>
